prometheus-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  name: prometheus
  namespace: default
spec:
  type: NodePort
  ports:
  - protocol: TCP
    name: prometheus
    port: 9090
    nodePort: 30515
  # - protocol: TCP
  #   name: alertmanager
  #   port: 9093
  selector:
    app: prometheus
    component: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: default
  labels:
    app: prometheus
    component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
      component: server
  template:
    metadata:
      name: prometheus
      labels:
        app: prometheus
        component: server
    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        image: prom/prometheus:v2.2.1
        imagePullPolicy: Always
        args:
          - '--storage.tsdb.retention=24h'
          - '--config.file=/etc/prometheus/prometheus.yml'
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus
        # - name: config-volume-alert-rules
        #   mountPath: /etc/prometheus-rules
        # - name: cert-file
        #   mountPath: /etc/ssl/etcd.pem
        # - name: key-file
        #   mountPath: /etc/ssl/etcd-key.pem

      # blackbox exporter
      # - name: blackbox
      #   image: quay.io/prometheus/blackbox-exporter:v0.11.0
      #   args:
      #     - --config.file=/config/blackbox.yml
      #   ports:
      #   - containerPort: 9115
      #   volumeMounts:
      #   - name: blackbox-config
      #     mountPath: /config

      volumes:
      - name: config-volume
        configMap:
          name: prometheus
      # - name: cert-file
      #   hostPath:
      #     path: /etc/kubernetes/ssl/etcd.pem
      # - name: key-file
      #   hostPath:
      #     path: /etc/kubernetes/ssl/etcd-key.pem
      # - name: config-volume-alert-rules
      #   configMap:
      #     name: prometheus-alert-rules

      #black box exporter
      # - name: blackbox-config
      #   configMap:
      #     name: prometheus-blackbox
